--- a/index.html
+++ b/index.html
@@ -60,6 +60,55 @@
       </div> <!-- aside content wrapper ends -->
     </aside>
 
+    <section class="features">
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+        <div class="features-items">
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like this one.</h2>
+        <article>
+          <div>
+            <h3>LaCrue Bottling Co. October 2018</h3>
+            <p>We loved our experience at Unplugged! Our company needed some time to reset and recharge, as well as strengthen relationships. After 5 days at Unplugged everyone felt recharged, renewed, and closer than ever! We loved the break from technology, personal chef, private beach, and all the activities our facilitator provided. Unplugged has it all!</p>
+          </div>
+        </article>
+      </div>
+    </section>
+
   </main> <!-- main wrapper -->
 
   <footer>
