--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>FAQs</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,7 +23,68 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="index.html">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="faq">
+    <div class="content-wrapper">
+      <h2>Frequently Asked Questions</h2>
+      <div class="faq-content">
+        <h4>How do I get to the Unplugged retreat?</h4>
+        <p>Take the River St exit and turn right onto Silver Blvd. Follow signs for Unplugged Retreat.</p>
+      </div>
+      <div class="faq-content">
+        <h4>What kind of team is right for the Unplugged Retreat?</h4>
+        <p>Unplugged is perfect for companies, clubs, sports teams, organizations and more!</p>
+      </div>
+      <div class="faq-content">
+        <h4>What size teams can you accomodate?</h4>
+        <p>We have space for teams of up to 40 people. We will arrange activities according to size. </p>
+      </div>
+      <div class="faq-content">
+        <h4>Is there really no wifi available?</h4>
+        <p>There is access to wifi for emergencies in one building only. We provide computers as well.</p>
+      </div>
+    </div> <!-- faq content wrapper ends -->
+  </main> <!-- main wrapper -->
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h4>Contact</h4>
+          <p>555-555-5555<br>
+          hello@unplugged.com</p>
+        </address>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com" target="_blank"></a></p>
+            <p><a href="https://www.twitter.com" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com" target="_blank"></a></p>
+          </div>
+        </div>
+      </div> <!-- footer content ends -->
+    </div> <!-- footer content-wrapper ends -->
+
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
+    </div>
+  </footer>
+
+
+
+
   <script src="../js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
