--- a/about/index.html
+++ b/about/index.html
@@ -29,8 +29,14 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
-      <div class="header-divider"></div>
+      <figure>
+        <a href="#">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
+      
+      <div class="header-divider">
+      </div>
       <nav>
         <ul>
           <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
