--- a/faq/index.html
+++ b/faq/index.html
@@ -28,8 +28,14 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
-      <div class="header-divider"></div>
+      <figure>
+        <a href="#">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
+
+      <div class="header-divider">
+      </div>
       <nav>
         <ul>
           <li><a href="index.html">FAQ</a></li>
