--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <figure>
+        <a href="#">
+          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
+
       <div class="header-divider">
       </div>
+
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
@@ -105,6 +111,10 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
+          <figure>
+            <img src="img/lacrue-photo.jpg" alt="LaCrue Review Photo"/>
+          </figure>
+
           <div>
             <h3>LaCrue Bottling Co. October 2018</h3>
             <p>We loved our experience at Unplugged! Our company needed some time to reset and recharge, as well as strengthen relationships. After 5 days at Unplugged everyone felt recharged, renewed, and closer than ever! We loved the break from technology, personal chef, private beach, and all the activities our facilitator provided. Unplugged has it all!</p>
